auto-test/tests/chapter_8/invalid_semantics/extra_credit/different_cases_same_scope.c


int main(void) {
    int a = 1;
    switch (a) {
        case 1:;
            int b = 10;
            break;

        case 2:;
            
            
            int b = 11;
            break;

        default:
            break;
    }
    return 0;
}